--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
-    "redux-saga": "^1.0.5"
+    "redux-saga": "^1.0.5",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "lint": "eslint ./src --fix --ext .jsx --ext .js",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.18.0",
