--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-persist": "^5.10.0",
     "redux-saga": "^1.0.5",
     "styled-components": "^4.3.2"
   },
