--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && aws --profile personal s3 sync ./build s3://reddit-reader-deviget"
   },
   "eslintConfig": {
     "extends": "react-app"
